added new files in cli dir

--- a/config/env.yml
+++ b/config/env.yml
@@ -4,7 +4,7 @@
 
 google_analytics_id : #add_it_here
 netlify_key : #add_it_here
-github_pages_key : #add_ithere'
+github_pages_key : #add_it_here'
 
-# any account keys you would want to use.
+# any account keys for storing you would want to use.
 mega_account_key : 
