--- a/config/env.yml
+++ b/config/env.yml
@@ -2,9 +2,10 @@
 # netlify or github pages is optional
 # mega key just make sure to make a config key
 
-google_analytics_id : #add_it_here
+key : 
+google_analytics_id :   
 netlify_key : #add_it_here
 github_pages_key : #add_it_here'
 
-# any account keys for storing you would want to use.
+# any account keys for storing the podcast would want to use.
 mega_account_key : 
