--- a/config/env.yml
+++ b/config/env.yml
@@ -2,10 +2,11 @@
 # netlify or github pages is optional
 # mega key just make sure to make a config key
 
-tracking_code : 3440012231234
-google_analytics_id : 4405502822
-netlify_key : #add_it_here
-github_pages_key : #add_it_here'
+api_keys : 
+  tracking_code : 'UA-144656396-1'
+  google_analytics_id : '4405502822'
+  netlify_key :  33204493021
+  github_pages_key : 4443023
 
 # any account keys for storing the podcast would want to use.
 mega_account_key : 
