--- a/yaml_format.yml
+++ b/yaml_format.yml
@@ -38,7 +38,7 @@ person:
     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  signature: |                    # will perserve the belw text format
+  signature: |                    # will perserve the below text format
     Mike
     Giraffe Academy
     email - giraffeacademy@gmail.com
