Added new to the configuration files

--- a/config/env.yml
+++ b/config/env.yml
@@ -4,9 +4,9 @@
 
 api_keys : 
   tracking_code : 'UA-144656396-1'
-  google_analytics_id : '4405502822'
-  netlify_key :  33204493021
-  github_pages_key : 4443023
+  google_analytics_account_id : '4405502822'
+  netlify_key : 
+  github_pages_key : '4443023'
 
 # any account keys for storing the podcast would want to use.
 mega_account_key : 
